--- a/index.html
+++ b/index.html
@@ -107,16 +107,10 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A passionate web developer and software engineer with hands-on experience in 
-developing scalable web applications using PHP, JavaScript, and C#. Strong 
-problem-solving skills demonstrated through the development of complex 
-solutions like a document signature validation application and event 
-management system. Proficient in various programming languages with hands-on 
-experience in front-end and back-end development. Strong problem-solving skills 
-and the ability to work collaboratively in a team environment. Eager to apply 
-academic knowledge and internship experience in real-world projects to 
-contribute to the success of a dynamic organization. Looking for opportunities to 
-grow and develop as a professional in the tech industry.</p>
+		            <p>Enthusiastic IT professional with hands-on experience in developing and implementing technology solutions. 
+Skilled in problem-solving, system development, and team collaboration. Eager to contribute to innovative 
+projects while expanding knowledge in a dynamic IT environment. Committed to working with high motivation 
+and making a positive impact in the field of Information Technology.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Nanda Kurniawan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>July 18, 2002</span></li>
