Update WA and pic

--- a/index.html
+++ b/index.html
@@ -56,15 +56,19 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-	          	<div class="one-third js-fullheight order-md-last img" style="background-image: url(images/foto3.png);">
-	          		<div class="overlay"></div>
-	          	</div>
+				<div class="one-third js-fullheight order-md-last img" 
+				style="background-image: url(images/Wann2.jpg); background-size: 50%; background-repeat: no-repeat; background-position: center;">
+			   <div class="overlay"></div>
+		   </div>
 		          <div class="one-forth d-flex  align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
 			            <h1 class="mb-4 mt-3">I'm <span>Nanda Kurniawan</span></h1>
-			            <h2 class="mb-4">Enthusiast Web Developer</h2>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <h2 class="mb-4">Web Enthusiast with a Passion for Growth</h2>
+			            <p>
+							<a href="https://api.whatsapp.com/send/?phone=6282258967185&text=Hello%20Nanda%20Kurniawan,%0AWe%20from%20[Your%20Company]%20would%20like%20to%20invite%20you%20for%20an%20interview%20for%20the%20[position%20name]%20role%20on%20[date]%20at%20[time]%20at%20[location].%20Please%20confirm%20your%20attendance.%20Thank%20you." class="btn btn-primary py-3 px-4" target="_blank">Hire me</a> 
+							<a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a>
+						  </p>
 		            </div>
 		          </div>
 	        	</div>
@@ -75,15 +79,18 @@
 	      	<div class="overlay"></div>
 	        <div class="container">
 	          <div class="row d-flex no-gutters slider-text align-items-end justify-content-end" data-scrollax-parent="true">
-			  <div class="one-third js-fullheight order-md-last img" style="background-image: url(images/foto3.png);">
-				<div class="overlay"></div>
-			  </div>
+				<div class="one-third js-fullheight order-md-last img" 
+				style="background-image: url(images/Wann.jpg); background-size: 100%; background-repeat: no-repeat; clip-path: inset(0 20% 0 20%);">
+			   <div class="overlay"></div>
+		   </div>
 
 		          <div class="one-forth d-flex align-items-center ftco-animate" data-scrollax=" properties: { translateY: '70%' }">
 		          	<div class="text">
 		          		<span class="subheading">Hello!</span>
-			            <h1 class="mb-4 mt-3">I'm a <span>web designer</span> based in London</h1>
-			            <p><a href="#" class="btn btn-primary py-3 px-4">Hire me</a> <a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+			            <h1 class="mb-4 mt-3">I'm an <span>Ambitious Tech Enthusiast</span></h1>
+			            <h2 class="mb-4">Empowering Businesses Through Technology</h2>
+			            <p><a href="https://api.whatsapp.com/send/?phone=6282258967185&text=Hello%20Nanda%20Kurniawan,%0AWe%20from%20[Your%20Company]%20would%20like%20to%20invite%20you%20for%20an%20interview%20for%20the%20[position%20name]%20role%20on%20[date]%20at%20[time]%20at%20[location].%20Please%20confirm%20your%20attendance.%20Thank%20you." class="btn btn-primary py-3 px-4" target="_blank">Hire me</a> 
+						<a href="#" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
@@ -107,16 +114,10 @@
 		          <div class="col-md-12 heading-section ftco-animate">
 		          	<h1 class="big">About</h1>
 		            <h2 class="mb-4">About Me</h2>
-		            <p>A passionate web developer and software engineer with hands-on experience in 
-developing scalable web applications using PHP, JavaScript, and C#. Strong 
-problem-solving skills demonstrated through the development of complex 
-solutions like a document signature validation application and event 
-management system. Proficient in various programming languages with hands-on 
-experience in front-end and back-end development. Strong problem-solving skills 
-and the ability to work collaboratively in a team environment. Eager to apply 
-academic knowledge and internship experience in real-world projects to 
-contribute to the success of a dynamic organization. Looking for opportunities to 
-grow and develop as a professional in the tech industry.</p>
+		            <p>Enthusiastic IT professional with hands-on experience in developing and implementing technology solutions. 
+						Skilled in problem-solving, system development, and team collaboration. Eager to contribute to innovative 
+						projects while expanding knowledge in a dynamic IT environment. Committed to working with high motivation 
+						and making a positive impact in the field of Information Technology.</p>
 		            <ul class="about-info mt-4 px-md-0 px-2">
 		            	<li class="d-flex"><span>Name:</span> <span>Nanda Kurniawan</span></li>
 		            	<li class="d-flex"><span>Date of birth:</span> <span>July 18, 2002</span></li>
