--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 	    </div>
     </section>
 
-    <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
+    <section class="ftco-about img ftco-section ftco-no-pb" id="about-section" style="margin-top: 0; padding-top: 0;">
     	<div class="container">
     		<div class="row d-flex">
     			<div class="col-md-6 col-lg-5 d-flex">
@@ -144,7 +144,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section ftco-no-pb" id="resume-section">
+    <section class="ftco-section ftco-no-pb" id="resume-section" style="margin-top: 3px; padding-top: 50px;">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-10 heading-section text-center ftco-animate">
@@ -204,7 +204,7 @@
     	</div>
     </section>
 
-    <section class="ftco-section" id="services-section">
+    <section class="ftco-section" id="services-section" style="margin-top: 0px; padding-top: 0px;">
     	<div class="container">
     		<div class="row justify-content-center py-5 mt-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -280,7 +280,7 @@
     </section>
 
 		
-		<section class="ftco-section" id="skills-section">
+		<section class="ftco-section" id="skills-section" style="margin-top: 0px; padding-top: 0px;">
 			<div class="container">
 				<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
@@ -361,12 +361,12 @@
 		</section>
  
 
-    <section class="ftco-section ftco-project" id="projects-section">
+    <section class="ftco-section ftco-project" id="projects-section" style="margin-top: 0px; padding-top: 0px;">
     	<div class="container">
     		<div class="row justify-content-center pb-5">
           <div class="col-md-12 heading-section text-center ftco-animate">
           	<h1 class="big big-2">Projects</h1>
-            <h2 class="mb-4">Our Projects</h2>
+            <h2 class="mb-4">My Projects</h2>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
           </div>
         </div>
@@ -499,58 +499,69 @@
       </div>
     </section> -->
 
-    <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
-    	<div class="container">
-				<div class="row d-md-flex align-items-center">
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="100">0</strong>
-                <span>Awards</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Complete Projects</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="1200">0</strong>
-                <span>Happy Customers</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
-            <div class="block-18">
-              <div class="text">
-                <strong class="number" data-number="500">0</strong>
-                <span>Cups of coffee</span>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- Section pertama tanpa gambar, akan menimpa section kedua -->
+<section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter" 
+style="position: relative; z-index: 2; margin-top: 0px;">
+<div class="container">
+<div class="row d-md-flex align-items-center">
+   <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+	   <div class="block-18">
+		   <div class="text">
+			   <strong class="number" data-number="100" style="font-size: 2rem; font-weight: bold;">0</strong>
+			   <span>Awards</span>
+		   </div>
+	   </div>
+   </div>
+   <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+	   <div class="block-18">
+		   <div class="text">
+			   <strong class="number" data-number="1200" style="font-size: 2rem; font-weight: bold;">0</strong>
+			   <span>Complete Projects</span>
+		   </div>
+	   </div>
+   </div>
+   <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+	   <div class="block-18">
+		   <div class="text">
+			   <strong class="number" data-number="1200" style="font-size: 2rem; font-weight: bold;">0</strong>
+			   <span>Happy Customers</span>
+		   </div>
+	   </div>
+   </div>
+   <div class="col-md d-flex justify-content-center counter-wrap ftco-animate">
+	   <div class="block-18">
+		   <div class="text">
+			   <strong class="number" data-number="500" style="font-size: 2rem; font-weight: bold;">0</strong>
+			   <span>Cups of coffee</span>
+		   </div>
+	   </div>
+   </div>
+</div>
+</div>
+</section>
 
-    <section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/about.jpg);">
-			<div class="container">
-				<div class="row justify-content-center">
-					<div class="col-md-7 ftco-animate text-center">
-						<h2>I'm <span>Available</span> for freelancing</h2>
-						<p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
-						<p class="mb-0"><a href="#" class="btn btn-primary py-3 px-5">Hire me</a></p>
-					</div>
-				</div>
-			</div>
-		</section>
+<!-- Section kedua dengan gambar dan tombol hire me -->
+<section class="ftco-section ftco-hireme img margin-top" style="background-image: url(images/Leptop.jpg); 
+												  background-color: rgba(0, 0, 0, 0.7); background-blend-mode: overlay; 
+												  position: relative; z-index: 1;">
+<div class="container">
+<div class="row justify-content-center">
+   <div class="col-md-7 ftco-animate text-center">
+	   <h2>I'm <span>Available</span> for freelancing</h2>
+	   <p>A small river named Duden flows by their place and supplies it with the necessary regelialia.</p>
+	   <p><a href="https://api.whatsapp.com/send/?phone=6282258967185&text=Hello%20Nanda%20Kurniawan,%0AWe%20from%20[Your%20Company]%20would%20like%20to%20invite%20you%20for%20an%20interview%20for%20the%20[position%20name]%20role%20on%20[date]%20at%20[time]%20at%20[location].%20Please%20confirm%20your%20attendance.%20Thank%20you." 
+		  class="btn btn-primary py-3 px-4" 
+		  style="position: relative; z-index: 9999; pointer-events: auto;" 
+		  target="_blank">Hire me</a>
+	   </p>
+   </div>
+</div>
+</div>
+</section>
 
-    <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
+
+
+    <section class="ftco-section contact-section ftco-no-pb" id="contact-section" style="margin-top: 0px; padding-top: 40px;">
       <div class="container">
       	<div class="row justify-content-center mb-5 pb-3">
           <div class="col-md-7 heading-section text-center ftco-animate">
@@ -600,8 +611,7 @@
         </div>
       </div>
     </section>
-		
-
+	
     <footer class="ftco-footer ftco-section">
       <div class="container">
         <div class="row mb-5">
@@ -656,7 +666,7 @@
           <div class="col-md-12 text-center">
 
             <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart color-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with by <a href="https://colorlib.com" target="_blank">Colorlib</a>
   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
           </div>
         </div>
